tests/ui/variance/variance-object-types.stderr
error: ['a: o]
  --> $DIR/variance-object-types.rs:7:1
   |
LL | struct Foo<'a> {
   | ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

